[gd_scene load_steps=5 format=3 uid="uid://dpmbibkl0qtnw"]

[ext_resource type="Script" path="res://ShopPhase/LibroSubMenu.gd" id="1_51psg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w65qo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ksq3"]
bg_color = Color(0.952941, 0.388235, 0.407843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfu67"]
bg_color = Color(0.458824, 0.0823529, 0.12549, 1)

[node name="LibroSubMenu" type="Panel" node_paths=PackedStringArray("entries_node")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 192.0
offset_right = -248.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w65qo")
script = ExtResource("1_51psg")
entries_node = NodePath("ScrollC/VCEntries")

[node name="HCTabs" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
offset_bottom = -8.0
theme_override_constants/separation = 10

[node name="ButtAll" type="Button" parent="HCTabs"]
layout_mode = 2
text = "Todos"

[node name="ButtSwords" type="Button" parent="HCTabs"]
layout_mode = 2
text = "Espadas"

[node name="ButtArmors" type="Button" parent="HCTabs"]
layout_mode = 2
text = "Armaduras"

[node name="ButtPotatos" type="Button" parent="HCTabs"]
layout_mode = 2
text = "Patatas"

[node name="ScrollC" type="ScrollContainer" parent="."]
layout_mode = 2
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VCEntries" type="VBoxContainer" parent="ScrollC"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_right = 896.0
offset_bottom = 64.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_0ksq3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gfu67")
text = "X"

[connection signal="button_up" from="HCTabs/ButtAll" to="." method="_on_butt_all_button_up"]
[connection signal="button_up" from="HCTabs/ButtSwords" to="." method="_on_butt_swords_button_up"]
[connection signal="button_up" from="HCTabs/ButtArmors" to="." method="_on_butt_armors_button_up"]
[connection signal="button_up" from="HCTabs/ButtPotatos" to="." method="_on_butt_potatos_button_up"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
